cmake_minimum_required(VERSION 2.8)
project(Array)

find_package(VTK REQUIRED)
include(${VTK_USE_FILE})

add_executable(ArrayBasics ArrayBasics.cxx)
add_executable(IdentityMatrix IdentityMatrix.cxx)
add_executable(ArrayIteration ArrayIteration.cxx)
add_executable(AdjacencyMatrix AdjacencyMatrix.cxx)

if(VTK_LIBRARIES)
  target_link_libraries(ArrayBasics ${VTK_LIBRARIES})
  target_link_libraries(IdentityMatrix ${VTK_LIBRARIES})
  target_link_libraries(ArrayIteration ${VTK_LIBRARIES})
  target_link_libraries(AdjacencyMatrix ${VTK_LIBRARIES})
else()
  target_link_libraries(ArrayBasics vtkHybrid)
  target_link_libraries(IdentityMatrix vtkHybrid)
  target_link_libraries(ArrayIteration vtkHybrid)
  target_link_libraries(AdjacencyMatrix vtkHybrid)
endif()
